plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.printcalculator'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

application {
	mainClass = 'com.printcalculator.BackendApplication'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'xyz.capybara:clamav-client:2.1.2'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'org.postgresql:postgresql'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.37'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.37'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'net.codecrete.qrbill:qrbill-generator:3.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'



}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootRun') {
	args = ["--spring.profiles.active=local"]
}

application {
	applicationDefaultJvmArgs = ["-Dspring.profiles.active=local"]
}
